# open-grind

./: CHANGES.md  KEYS.md.asc  README.md  ROADMAP.md  eslint.config.js  flake.nix  package.json  svelte.config.js  tsconfig.json
docs/: package.json
docs/content/grindr-api/: security-headers.md
docs/content/grindr-api/browse/: grid.md
docs/content/grindr-api/messaging/: albums.md  conversations.md  messages.md
docs/content/grindr-api/users/: profiles.md
scripts/: dev-android.sh
src/: app.d.ts  app.html  layout.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/api/: auth.rs  client.rs  headers.rs  rest.rs  ws.rs
src/lib/: android-native-bridge.ts  back-gesture-event.svelte.ts  utils.ts  ws.svelte.ts
src/lib/api/: album.ts  conversation.ts  genders.ts  index.ts  messages.ts  places.ts  profile.ts  pronouns.ts
src/lib/app-data/: distance-unit.svelte.ts  preferences.svelte.ts
src/lib/components/: NavBar.svelte  ProgressiveBlur.svelte
src/lib/components/filters/: AcceptNSFWPicsFilter.svelte  AgeFilter.svelte  BodyTypeFilter.svelte  FilterBoolean.svelte  FilterDropdown.svelte  FilterField.svelte  FilterSimpleArray.svelte  GendersFilter.svelte  HealthPracticesFilter.svelte  HeightFilter.svelte  LookingForFilter.svelte  MeetAtFilter.svelte  PhotosFilter.svelte  PositionFilter.svelte  RelationshipStatusFilter.svelte  TribesFilter.svelte  WeightFilter.svelte  filters.ts
src/lib/components/location-chooser/: GeoMapPicker.svelte  LocationChooser.svelte
src/lib/model/: album.ts  conversation.ts  genders.ts  interest.ts  message.ts  profile.ts  pronouns.ts  right-now.ts  types.ts
src/lib/model/grid/: cascade.ts  index.ts  search.ts
src/lib/stores/: unread.svelte.ts
src/lib/utils/: distance.ts
src/routes/: +error.svelte  +layout.svelte
src/routes/(protected)/: +layout.ts
src/routes/(protected)/(navbar)/: +layout.svelte
src/routes/(protected)/(root)/: +page.svelte  Filters.svelte  Grid.svelte  GridFilters.svelte  LocationChange.svelte  LocationEmpty.svelte  ProfileMiniCard.svelte  TopBar.svelte  grid.ts
src/routes/(protected)/chat/: +layout.svelte  +layout@(protected).svelte  Conversation.svelte  ConversationsList.svelte  (+3 more)
(+108 files in other folders)
